@@ -1,0 +1,111 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Foundation -->
+<window id="1106" type="dialog">
+    <defaultcontrol always="true">9000</defaultcontrol>
+    
+    <controls>
+
+        <include>GlobalOverlay</include>
+
+        <control type="group">
+            <include>DefDialogBackground</include>
+
+            <control type="label">
+                <include>DefDialogHeader</include>
+                <label>31269</label>
+            </control>
+
+            <control type="list" id="9000">
+                <left>8</left>
+                <width>1064</width>
+                <posy>120</posy>
+                <height>759</height>
+                <onup>9000</onup>
+                <ondown>9000</ondown>
+
+                <itemlayout height="69" width="1064">
+
+                    <control type="label">
+                        <left>30</left>
+                        <right>30</right>
+                        <font>SmallBold</font>
+                        <textcolor>Black70</textcolor>
+                        <height>66</height>
+                        <aligny>center</aligny>
+                        <info>ListItem.Label</info>
+                    </control>
+
+                    <control type="label">
+                        <left>30</left>
+                        <right>30</right>
+                        <textcolor>Black70</textcolor>
+                        <align>right</align>
+                        <height>66</height>
+                        <aligny>center</aligny>
+                        <info>ListItem.Label2</info>
+                    </control>
+
+                </itemlayout>
+
+                <focusedlayout height="69" width="1064">
+
+                    <control type="image">
+                        <left>0</left>
+                        <right>0</right>
+                        <height>66</height>
+                        <texture border="5" colordiffuse="$VAR[ColorHighlight]">common/white.png</texture>
+                    </control>
+
+                    <control type="label">
+                        <left>30</left>
+                        <right>30</right>
+                        <height>66</height>
+                        <font>SmallBold</font>
+                        <aligny>center</aligny>
+                        <textcolor>Selected</textcolor>
+                        <info>ListItem.Label</info>
+                    </control>
+
+                    <control type="label">
+                        <left>30</left>
+                        <right>30</right>
+                        <align>right</align>
+                        <height>66</height>
+                        <aligny>center</aligny>
+                        <textcolor>Selected</textcolor>
+                        <info>ListItem.Label2</info>
+                    </control>
+
+                </focusedlayout>
+                <content>
+                    <item>
+                        <label>16018</label>
+                        <onclick>Close</onclick>
+                        <onclick>Skin.SetString(home.slideshowpath,pvr/background.jpg)</onclick>
+                    </item>
+                    <item>
+                        <label>31272</label>
+                        <onclick>Close</onclick>
+                        <onclick>Skin.SetImage(home.slideshowpath)</onclick>
+                    </item>
+                    <item>
+                        <label>31273</label>
+                        <onclick>Close</onclick>
+                        <onclick>Skin.SetPath(home.slideshowpath)</onclick>
+                    </item>
+                    <item>
+                        <label>31105</label>
+                        <onclick>Close</onclick>
+                        <onclick>Skin.Reset(home.slideshowpath)</onclick>
+                        <onclick>RunScript(script.skinshortcuts,type=shortcuts&amp;grouping=video&amp;skinList=home.fallbackwidget&amp;skinLabel=home.fallbackwidget.name&amp;skinType=home.fallbackwidget.type)</onclick>
+                    </item>
+                </content>
+
+            </control>
+
+
+        </control>
+
+    </controls>
+
+</window>
