@@ -267,15 +267,6 @@
                     <selected>Container.Filtered</selected>
                 </control>
                 
-                <control type="button" id="9092">
-                    <description>Set Custom Widget</description>
-                    <include>DefContextButton</include>
-                    <align>left</align>
-                    <label>31222</label>
-                    <onclick>Back</onclick>
-                    <onclick>ActivateWindow(1106)</onclick>
-                </control>
-                
                 <control type="button" id="9091">
                     <description>Global Search</description>
                     <include>DefContextButton</include>
