@@ -334,4 +334,18 @@
     <thumbnail label="years.png">special://skin/extras/icons/years.png</thumbnail>
     <thumbnail label="youtube.png">special://skin/extras/icons/youtube.png</thumbnail>
     
+    <!-- GROUPINGS -->
+    <!-- Video Grouping -->
+    <video-groupings>
+        
+        <content>video</content>
+        <node label="32040">
+            <content>playlist-video</content>
+        </node>
+        <node label="32010">
+            <shortcut label="1037" type="32014" icon="DefaultAddonVideo.png">ActivateWindow(Videos,Addons,return)</shortcut>
+            <content>addon-video</content>
+        </node>
+    </video-groupings>
+	
 </overrides>
