@@ -1,3 +1,11 @@
+[B]2.2.5[/B]
+Fix vertical widgets fallback image
+Add ability to choose spotlight fallback widget
+Add widgets on up for featured
+
+[B]2.2.4[/B]
+Fix keyboard zorder
+
 [B]2.2.3[/B]
 Add Keyboard Autocompletion module
 Add PVR Thumb support from skin helper
